iniciando o quiz do site

--- a/Entre Caçadores, Colossos e Baldurianos/public/bloodborne.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/bloodborne.html
@@ -206,7 +206,7 @@
 
         <div class="simulacao">
 
-            <h2>Simulação</h2>
+            <h2>Imersao</h2>
             <div class="container">
                 Para uma maior imersão ao universo do jogo, onde não há uma explicação clara sobre o caminho, foi preparado uma silumação das funcionalidades do jogo, mostrando diferentes finais e acontecimentos do jogo.
 
