--- a/Entre Caçadores, Colossos e Baldurianos/public/colossus.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/colossus.html
@@ -24,7 +24,7 @@
                 <div id="div_legenda"></div>
 
                 <audio id="dormin">
-                    <source src="./assets/" type="audio/mp3">
+                    <source src="./assets/audios/vozDorminRecortado.mp3" type="audio/mp3">
                 </audio>
             </div>
         </div>
