--- a/Entre Caçadores, Colossos e Baldurianos/public/yharnam.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/yharnam.html
@@ -14,7 +14,6 @@
     <div class="conteudo">
 
         <div class="yharnam">
-            <div class="fundoMascarado"></div>
             <div class="container">
                 <p class="descricaoJogo">Yharnam Central é onde a jornada em Bloodborne realmente começa. Uma cidade
                     silenciosa e opressiva, tomada pela névoa, pela decadência e pelo medo. Suas ruas estreitas e
@@ -30,7 +29,6 @@
         </div>
 
         <div class="janela">
-            <div class="fundoMascarado1"></div>
             <div class="container">
 
 
@@ -64,9 +62,9 @@
             </div>
         </div>
 
-        <div class="padre">
-            <div class="fundoMascarado1"></div>
+        <div class="broche">
             <div class="container">
+
                 <p class="descricaoJogo">Ao encontrar um corpo no mesmo local, um broche vermelho brilhante, familiar, é
                     encontrado.</p>
 
@@ -75,12 +73,15 @@
         </div>
 
         <div class="capela">
-            <div class="fundoMascarado1"></div>
             <div class="container">
-                <p class="descricaoJogo">A Capela de Oedon, um lugar amigável, onde as feras não são bem vindas, um
+                      <p>A Capela de Oedon, um lugar amigável, onde as feras não são bem vindas, um
                     lugar seguro para abrigar moradores onde ainda não está com a sanidade totalmente abalada.</p>
+                <div class="imagens">
+                    <img src="./assets/imagens/bloodborne/bloodborne_capela.png">
+                    <img src="./assets/imagens/bloodborne/bloodborne_capela.jpg">
+                </div>
+          
 
-                <button class="botao" onclick="tocarMusica()">atacar</button>
             </div>
         </div>
 
