--- a/Entre Caçadores, Colossos e Baldurianos/public/dashboard/dashboard.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/dashboard/dashboard.html
@@ -12,12 +12,12 @@
 <body>
 
 
-<div>
+<div class="conteudo">
   <div class="grafico">
     Histórico de pontos:
     <canvas id="myChart1" class="grafico"></canvas>
   </div>
-  <div>
+  <div class="kpi">
     <div>
       Acertos:
     </div>
@@ -45,7 +45,7 @@
     data: {
       labels: ['12:00	', '13:00', '14:00', '15:00	', '16:00', '17:00', '18:00'],
       datasets: [{
-        label: 'Temperatura',
+        label: 'Histórico de Pontos',
         data: [0, 1, 2, 3, 6, 9, 7],
         backgroundColor: 'rgb(255,99,132)',
         borderColor: 'rgb(255,99,132)'
