--- a/Entre Caçadores, Colossos e Baldurianos/public/quiz.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/quiz.html
@@ -174,6 +174,8 @@
 
     let indexQuestaoAtual = 0;
     let pontos = 0;
+    let acertos = 0;
+    let erros = 0;
 
     function iniciarQuiz() {
         indexQuestaoAtual = 0;
@@ -224,9 +226,11 @@
 
         if (correto) {
             pontos += 5;
+            acertos ++;
         }
         else{
             pontos -=2;
+            erros++;
         }
 
 
