dados do quiz inseridos na dash

--- a/Entre Caçadores, Colossos e Baldurianos/public/bloodborne.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/bloodborne.html
@@ -227,7 +227,7 @@
 <script>
 
 function iniciar(){
-    window.location.href = "bloodborne_imersao.html";
+    window.location.href = "quiz.html";
 }
 
 </script>
