adicionando o sonho interativo na pg bloodborne

--- a/Entre Caçadores, Colossos e Baldurianos/public/bloodborne.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/bloodborne.html
@@ -160,7 +160,7 @@
 
 
 
-                <div class="area sonho">
+                <div onclick="sonho()" class="area sonho">
                     <div class="container">
                         <h3>O Sonho do Caçador</h3>
                         Um refúgio etéreo onde o Caçador repousa e se prepara. Guiado por Gehrman e pela Boneca, é um
@@ -228,6 +228,10 @@
 
 function iniciar(){
     window.location.href = "quiz.html";
+}
+function sonho(){
+    window.location.href = "dream.html";
+
 }
 
 </script>
