--- a/Entre Caçadores, Colossos e Baldurianos/public/dashboard/dashboard.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/dashboard/dashboard.html
@@ -13,7 +13,7 @@
 
 
 <div class="conteudo">
-  <div class="grafico">
+  <div class="graficos">
     Histórico de pontos:
     <canvas id="myChart1" class="grafico"></canvas>
   </div>
@@ -54,36 +54,12 @@
     options: {
       scales: {
         y: {
-          beginAtZero: false
-        }
-      }
-    }
-  });
-
-  const chart2 = document.getElementById('myChart2');
-
-  new Chart(chart2, {
-    type: 'bar',
-    data: {
-      labels: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho'],
-      datasets: [{
-        label: 'Temperatura Média',
-        data: [30, 29, 28, 25, 22, 23],
-        backgroundColor: 'rgb(255,99,132)'
-      },
-      {
-        label: 'Umidade Média',
-        data: [80, 82, 80, 85, 80, 83],
-        backgroundColor: 'rgb(30,144,255)'
-      }]
-    },
-    options: {
-      scales: {
-        y: {
           beginAtZero: true
+          
         }
       }
     }
   });
+
 
 </script>
