--- a/Entre Caçadores, Colossos e Baldurianos/public/index.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/index.html
@@ -13,7 +13,7 @@
 
     <div class="nav">
 
-        <li class="agora">
+        <li class="navegacao">
             <a href="#">Inicial</a>
         </li>
         <li>
